; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/ipv4/extr_ip_output.c_ip_select_ttl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/ipv4/extr_ip_output.c_ip_select_ttl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inet_sock = type { i32 }
%struct.dst_entry = type { i32 }

@RTAX_HOPLIMIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inet_sock*, %struct.dst_entry*)* @ip_select_ttl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ip_select_ttl(%struct.inet_sock* %0, %struct.dst_entry* %1) #0 {
  %3 = alloca %struct.inet_sock*, align 8
  %4 = alloca %struct.dst_entry*, align 8
  %5 = alloca i32, align 4
  store %struct.inet_sock* %0, %struct.inet_sock** %3, align 8
  store %struct.dst_entry* %1, %struct.dst_entry** %4, align 8
  %6 = load %struct.inet_sock*, %struct.inet_sock** %3, align 8
  %7 = getelementptr inbounds %struct.inet_sock, %struct.inet_sock* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load %struct.dst_entry*, %struct.dst_entry** %4, align 8
  %13 = load i32, i32* @RTAX_HOPLIMIT, align 4
  %14 = call i32 @dst_metric(%struct.dst_entry* %12, i32 %13)
  store i32 %14, i32* %5, align 4
  br label %15

15:                                               ; preds = %11, %2
  %16 = load i32, i32* %5, align 4
  ret i32 %16
}

declare dso_local i32 @dst_metric(%struct.dst_entry*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
